# hemdaimail

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/inbox/: page.tsx
apps/web/src/app/(dashboard)/sent/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: ComposeModal.tsx  Editor.tsx  Header.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  use-websocket.ts
docs/: architecture.md  mail-worker-design.md  production-readiness.md
infrastructure/docker/: docker-compose.prod.yml  docker-compose.yml
infrastructure/k8s/base/: kustomization.yaml
infrastructure/k8s/base/api/: api.yaml
infrastructure/k8s/base/config/: config.yaml
infrastructure/k8s/base/ingress/: ingress.yaml
infrastructure/k8s/base/mail-worker/: mail-worker.yaml
infrastructure/k8s/base/meilisearch/: meilisearch.yaml
infrastructure/k8s/base/minio/: minio.yaml
infrastructure/k8s/base/postgres/: postgres.yaml
infrastructure/k8s/base/redis/: redis.yaml
infrastructure/k8s/base/search-worker/: search-worker.yaml
infrastructure/k8s/base/web/: web.yaml
infrastructure/nginx/: hemdaimail.conf.example
services/api/: Cargo.toml  Dockerfile
services/api/.sqlx/: query-32cb1ba92eb66b21035d8c526e996ea013120cffca40e79651d378f67f794520.json  query-552e20b2698de169e95221ff67a05f675a09d0c490948ffdcd3e23f27f18c974.json  query-59a378473b217808e6654e688a9f4bfb18d239b67aca91bfd85204e2374795cb.json  query-630f34c405349346994489fa25858a97fd85dafac0f1c632b2780525fdb79f28.json  query-78a788159bcf0d8d384246b4fcd5f3d47f0601db53d96372889745cb9e6f2d22.json  query-a8eacc40351202b4f7fc29fe3f45c9fb6bd59e521ad521512e529f59b4c5d0a6.json  query-a9fddc38f37bf106ac7d6e5b2b0cd4e1758999fe60933821841409a3dfd5bd8b.json  query-dabdcfbf0a6e4a9d64f2513cfc25c828df1278b55dde9bf0b4dddd7be6b2f7fc.json  query-dd73b86cce485e5c08b80cb574d4ec05900192d6beb4fb784d10a7e09917c53d.json  query-e3cd128fd4d6e987aeca0405e85a35ab89250193418a5cafef174fd2c156572d.json
services/api/migrations/: 20260508072700_init_schema.sql  20260508184331_mail_system.sql  20260508192508_refine_mail_schema.sql  20260509073045_auth_hardening.sql
services/api/src/: lib.rs  main.rs  observability.rs
services/api/src/auth/: mod.rs  models.rs
services/api/src/db/: audit.rs  mod.rs
services/api/src/mail/: mod.rs  models.rs
services/api/src/realtime/: mod.rs
services/api/tests/: auth_test.rs  db_test.rs  health_test.rs
services/mail-worker/: Cargo.toml  Dockerfile
services/mail-worker/.sqlx/: query-17419be8c10ac25ae226cca6c63569a297c88177e72beca4fffcf5d418d577b0.json  query-5b546191ef916cba17a59ad0bb85b3cb9253d0db25902e7bd4c3857442d58613.json  query-6fa59c3f078fd83a49e120ba55b1d80aaa0f99ce838be6944041f9780a7e733b.json  query-85dc0383cd4a0778314c636e3d36e51645509909503329fdea22b5178bb1fe9c.json  query-9430124e82d14eefa9bd6471da6f6c3efde91f56820f0056c53421d3497e69c3.json  query-a45ea55f2caf735c86191a449f134929b7eec580f5de69ff96666e676548d36a.json  query-aec6e7361765b3ca21130485ec84ddf663e9ea76ac1db8121b109149017b6f55.json
services/mail-worker/src/: db.rs  db_ops.rs  main.rs
services/mail-worker/src/imap/: mod.rs  processor.rs
services/mail-worker/src/models/: tasks.rs
services/mail-worker/src/queue/: mod.rs
services/mail-worker/src/storage/: mod.rs
services/search-worker/: Cargo.toml  Dockerfile
services/search-worker/src/: main.rs
services/search-worker/src/models/: mod.rs
