[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "serde", "smtp-transport", "builder", "hostname"] }
redis = { version = "0.24", features = ["tokio-comp"] }
futures-util = "0.3"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "tokio"] }
tracing-opentelemetry = "0.22"
tonic = "0.10"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
tower_governor = "0.4"
ammonia = "3.3"
axum-extra = { version = "0.9", features = ["cookie"] }
rand = "0.8"
