[package]
name = "mail-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
async-imap = { version = "0.9", default-features = false, features = ["runtime-async-std"] }
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
async-native-tls = "0.5"
mailparse = "0.14"
aws-config = "1.1"
aws-sdk-s3 = "1.17"
