[package]
name = "search-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
meilisearch-sdk = "0.25"
uuid = { version = "1.0", features = ["v4", "serde"] }
