[package]
name = "search-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.24", features = ["tokio-comp"] }
meilisearch-sdk = "0.25"
uuid = { version = "1.0", features = ["v4", "serde"] }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "tokio"] }
tracing-opentelemetry = "0.22"
tonic = "0.10"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
axum = "0.7"
